--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,145 @@
+/* Basic setup (lesson form udemy) */
 
-.slider_dm{
-    margin: auto;
-//    border: 2px solid red;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+
+html{
+    background-color: #fff;
+    color: #555;
+    font-weight: 300;
+    font-family: sans-serif;
+    font-size: 20px;
+    text-rendering: optimizeLegibility;
+}
+
+/* REUSEBLE COMPONENT */
+.row{
+    max-width: 1140px;
+    margin: 0 auto 0 auto;
+/*    or*/
+/*    margin: 0 auto;*/
+  border: 1px solid red; 
+}
+
+
+
+h1{
+    margin-top: 0;
+    margin-bottom: 20px;
+    color: #fff;
+    font-size: 240%;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    word-spacing: 4px;
+}
+
+
+
+
+//.test1{
+//     
+//    width: 200px;
+///*    margin: 0 auto 0 auto;*/
+///*    or*/
+//    margin: 0 auto;
+///*    border: 1px solid green;*/
+//}
+
+
+
+/* ---- BUTTONS --- */
+/* ---------------  */
+.btn:link,
+.btn:visited{
+    display: inline-block;
+    padding: 10px 30px;
+    font-weight: 300;
+    text-decoration: none;
+    border-radius: 200px;
+    background-color: #fff;
+    transition: background-color 0.9s, border 0.9s, color 0.9s; 
+}
+
+.btn-full:link,
+.btn-full:visited {
+    background-color: #e67e22;
+    border: 1px solid #e67e22;
+     color: #fff;
+    margin-right: 15px;
+}
+
+.btn-ghost:link,
+.btn-ghost:visited{
+    border: 1px solid #e67e22;
+    color: #e67e22;
+}
+
+
+.btn:hover,
+.btn:active{
+    background-color: #cf6d20;
+}
+
+.btn-full:hover,
+.btn-full:active{
+    background-color: #cf6d20;
+}
+ 
+.btn-ghost:hover,
+.btn-ghost:active{
+    border: 1px solid #e67e22;
+    color: #fff;
+}
+
+
+/* HEADER */
+header {
+    background-color: antiquewhite;
+/*    background-image: url(/hero.jpg);*/
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+}
+
+
+.hero-text-box{
+  position: absolute;
+    width: 1140px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+/*      border: 1px solid green;*/
+}
+
+.logo{
+    height: 100px;
+    width: auto;
+    float: left;
+}
+
+.main-nav{
+    float: right;
+    list-style: none;
+    border: 1px solid green;
+}
+
+.main-nav li{
+    display: inline-block;
+    border: 1px solid red;
+}
+
+
+
+
+
+
+/* ----------- BootStrup -----------*/
+//.slider_dm{
+//    margin: auto;
+////    border: 2px solid red;
+//    margin-left: 40px;
+//}
